--- a/mindfullcampus/src/index.css
+++ b/mindfullcampus/src/index.css
@@ -1,102 +1,145 @@
-*{
-  margin: 0;
-  box-sizing: border-box;
-  font-family:  sans-serif;
+.tile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    width: 200px;
+    height: 200px;
+    text-decoration: none;
+    color: #333;
+  }
   
+  .tile h3 {
+    margin-top: 10px;
+    font-size: 20px;
+  }
+
+  
+
+.tile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    width: 200px;
+    height: 200px;
+    text-decoration: none;
+    color: #333;
+  }
+  
+  .tile h3 {
+    margin-top: 10px;
+    font-size: 20px;
+  }
+  
+  @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-input, button {
-  appearance: none;
-  background: none;
-  border: none;
-  outline: none;
+html {
+  font-family: 'Nunito', sans-serif;
+  font-size: 22px;
+  color: #fff;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
+body {
+  min-height: 100vh;
+  background-color: dodgerblue;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .App {
-  height:100vh;
   display: flex;
-  align-items:center;
-  justify-content:center;
-  background-color: #53565a;
-  
-}
-form {
-  display: block;
-  position:relative;
-  
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 1rem 0.5rem;
 }
 
-form:after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: -5px;
-  left: -5px;
-  right: -5px;
-  bottom: -5px;
-  
-
-}
-
-form .form-inner{
-  position: relative;
-  display: block;
-  background-color:#fff ;
-  padding: 30px;
-  z-index: 2;
-}
-
-form .form-inner h2 {
-  color: #888;
-  font-size: 28px;
-  font-weight: 500px;
-  margin-bottom: 30px;
-}
-
-form,form-inner .form-group{
-  display: block;
-  width: 300px;
-  margin-bottom: 15px;
-}
-
-.form-inner .form-group label{
-  display: block;
-  color: #666;
-  font-size: 12px;
-  margin-bottom: 5px;
-  transition: 0.4s;
-}
-
-.form-inner .form-group:focus-within label {
-  color: #fe4880;
-}
-
-form .form-inner .form-group input {
-  display: block;
+section {
   width: 100%;
-  padding: 10px 15px;
-  background-color: #f8f8f8;
-  border-radius: 8px;
-  transition: 0.4s;
+  max-width: 420px;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-form .form-inner .form-group input:focus{
-  box-shadow:  0px 0px 3px rgba(0,0,0,0,0.2);
+form.login-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  flex-grow: 1;
+  padding-bottom: 1rem;
 }
 
-form .form-inner input[type="submit"] {
-  display: inline-block;
-  padding: 10px 15px;
-  border-radius: 8px;
-  background-image: linear-gradient(to right, #ffce00 50%,  #ffce00 50%, #fe4889);
-  background-size: 200%;
-  background-position: 0%;
-  transition: 0.4s;
-  color: #fff;
-  font-weight: 700;
+form.login-form label,
+form.login-form button {
+  margin-top: 1rem;
+}
+
+form.login-form button {
+  padding: 0.5rem;
+}
+
+section p {
+  margin-top: 1rem;
+}
+
+section p .line {
+  text-decoration: underline;
   cursor: pointer;
 }
 
-form .form-inner input[type="submit"]:hover {
-  background-position: 100% 0%;
-}
+
+section.login-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  form.login-form {
+    width: 100%;
+    max-width: 320px;
+    padding: 1rem;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  .login-section form label {
+    display: inline-block;
+    width: 100px; /* Adjust the width as needed */
+    margin-bottom: 0.5rem;
+  }
+  
+  .login-section form input[type="password"] {
+    width: 100px; /* Adjust the width as needed */
+    margin-bottom: 0.5rem;
+  }
+  
