chat implementation and other logics

--- a/mindfullcampus/src/components/home.css
+++ b/mindfullcampus/src/components/home.css
@@ -1,3 +1,20 @@
+.formContainer {
+    /* Existing background styles */
+    /* background-color: #000000; */
+    height: 100vh;
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23ffffff' fill-opacity='0.35' fill-rule='evenodd'/%3E%3C/svg%3E");
+}
+
+.logout {
+    position: absolute;
+    top: 90px;
+    left: 80%;
+}
+
 .pageTitle {
     text-align: center;
     /* Replace with a suitable color that matches the background */
@@ -29,44 +46,22 @@ h1 {
 
 }
 
-.formContainer {
-    /* Existing background styles */
-    background-color: #360c96;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23ffffff' fill-opacity='0.35' fill-rule='evenodd'/%3E%3C/svg%3E");
-}
-
-.tiles {
-    display: flex;
-    flex-direction: row;
-    padding: 70px;
-    justify-content: space-between;
-    gap: 80px;
-    position: relative;
-    z-index: 1;
-    /* Ensure the tiles are on top of the background */
-}
-
-  
-.card {
 
 
-    background-color: white;
-    padding: 220px 10px 10px 60px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    
-    transition: transform 0.2s ease-in-out;
-}
 
 .card:hover {
     transform: translateY(-5px);
 }
 
-.card h3 {
-    text-align: center;
-    margin-top: auto;
-  }
+
+.card-row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  gap: 125px;
+  
+}
+
+.litxt{
+  text-decoration: none;
+}
