--- a/mindfullcampus/src/components/register.css
+++ b/mindfullcampus/src/components/register.css
@@ -32,7 +32,7 @@
       .title {
         padding-top: 10px;
         
-        color: #5d5b8d;
+        color: #110e70;
         font-size: 21px;
       }
   
